// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Session codes label and markup when a class is on a regular schedule should not display the Session label 1`] = `
<ClassesCards
  classes={
    Object {
      "amount": 0,
      "buildingCode": "COE",
      "campus": "MAIN",
      "catalogNo": "101",
      "classEndTime": "1:50 PM",
      "classMeetingNo": 1,
      "classNumber": 101,
      "classSection": "01",
      "classStartTime": "12:00 PM",
      "courseAttr": "",
      "courseId": "000001",
      "csuUnits": 4,
      "degreeType": "PBAC",
      "description": "ACCT GOVT & NONPROFIT ORG",
      "employeeId": "001343367",
      "enrolledCapacity": 30,
      "enrolledTotal": 28,
      "facilityId": "JB0113",
      "fri": "N",
      "geCourseAttr": "",
      "instructionMode": "P",
      "instructorName": "Dyck, Harold",
      "mon": "Y",
      "quarter": "2194",
      "room": "101",
      "sat": "N",
      "sessionCode": "1",
      "ssrComponent": "SEM",
      "subject": "ACCT",
      "sun": "N",
      "textbook": "",
      "thurs": "N",
      "title": "Introduction to Accounting",
      "topic": "",
      "tues": "N",
      "waitlistCapacity": 100,
      "waitlistTotal": 1,
      "wed": "Y",
    }
  }
  currentTerm="0000"
>
  <div
    className="course result-item"
  >
    <div
      className="item-header"
    >
      <div
        className="course-header"
      >
        <div
          className="course-name"
        >
          <strong>
            ACCT 101
             - Introduction to Accounting
          </strong>
          <Blueprint3.Popover
            boundary="scrollParent"
            captureDismiss={false}
            defaultIsOpen={false}
            disabled={false}
            hasBackdrop={false}
            hoverCloseDelay={300}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="click"
            minimal={false}
            modifiers={Object {}}
            openOnTargetFocus={true}
            popoverClassName="bp3-popover-content-sizing"
            position="auto"
            targetTagName="span"
            transitionDuration={300}
            usePortal={true}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onClick={[Function]}
                      >
                        <div
                          className="bp3-tooltip-indicator"
                          key=".0"
                        >
                          <button
                            className="course-info-btn"
                          >
                            <i
                              arial-label="hidden"
                              className="fas fa-info-circle"
                            />
                            <span
                              className="sr-only"
                            >
                              ACCT 101
                            </span>
                          </button>
                        </div>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={true}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={true}
                  enforceFocus={true}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={true}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </div>
        <div
          className="course-details"
        >
          <span>
            Section 
            01
             • 
          </span>
          <span>
            Seminar
             • 
          </span>
          <span
            className="course-id"
          >
            Class No. 
            101
          </span>
        </div>
      </div>
      <div
        className="course-info"
      >
        <div
          className="course-status course-status--closed"
        >
          <span />
          Closed
        </div>
        <div />
      </div>
    </div>
    <div
      className="item-body"
    >
      <ul
        className="course-desc"
      >
        <li>
          <span>
            Units 
          </span>
          4
        </li>
        <li>
          <span>
            Meeting Time 
          </span>
          12:00 pm - 1:50 pm
        </li>
        <li>
          <span>
            Meeting Days 
          </span>
          M-W
        </li>
        <li>
          <span>
            Room 
          </span>
          COE 101
        </li>
        <li>
          <span>
            Campus 
          </span>
          San Bernardino
        </li>
        <li>
          <span>
            Instructor
          </span>
          Dyck, Harold
        </li>
        <li>
          <span>
            Instruction Mode 
          </span>
          Classroom
        </li>
      </ul>
      <div
        className="course-books"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
        />
      </div>
    </div>
  </div>
</ClassesCards>
`;

exports[`Session codes label and markup when a class is on a summer schedule should display the Session label 1`] = `
<ClassesCards
  classes={
    Object {
      "amount": 0,
      "buildingCode": "COE",
      "campus": "MAIN",
      "catalogNo": "101",
      "classEndTime": "1:50 PM",
      "classMeetingNo": 1,
      "classNumber": 101,
      "classSection": "01",
      "classStartTime": "12:00 PM",
      "courseAttr": "",
      "courseId": "000001",
      "csuUnits": 4,
      "degreeType": "PBAC",
      "description": "ACCT GOVT & NONPROFIT ORG",
      "employeeId": "001343367",
      "enrolledCapacity": 30,
      "enrolledTotal": 28,
      "facilityId": "JB0113",
      "fri": "N",
      "geCourseAttr": "",
      "instructionMode": "P",
      "instructorName": "Dyck, Harold",
      "mon": "Y",
      "quarter": "2194",
      "room": "101",
      "sat": "N",
      "sessionCode": "6W1",
      "ssrComponent": "SEM",
      "subject": "ACCT",
      "sun": "N",
      "textbook": "",
      "thurs": "N",
      "title": "Introduction to Accounting",
      "topic": "",
      "tues": "N",
      "waitlistCapacity": 100,
      "waitlistTotal": 1,
      "wed": "Y",
    }
  }
  currentTerm="0000"
>
  <div
    className="course result-item"
  >
    <div
      className="item-header"
    >
      <div
        className="course-header"
      >
        <div
          className="course-name"
        >
          <strong>
            ACCT 101
             - Introduction to Accounting
          </strong>
          <Blueprint3.Popover
            boundary="scrollParent"
            captureDismiss={false}
            defaultIsOpen={false}
            disabled={false}
            hasBackdrop={false}
            hoverCloseDelay={300}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="click"
            minimal={false}
            modifiers={Object {}}
            openOnTargetFocus={true}
            popoverClassName="bp3-popover-content-sizing"
            position="auto"
            targetTagName="span"
            transitionDuration={300}
            usePortal={true}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onClick={[Function]}
                      >
                        <div
                          className="bp3-tooltip-indicator"
                          key=".0"
                        >
                          <button
                            className="course-info-btn"
                          >
                            <i
                              arial-label="hidden"
                              className="fas fa-info-circle"
                            />
                            <span
                              className="sr-only"
                            >
                              ACCT 101
                            </span>
                          </button>
                        </div>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={true}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={true}
                  enforceFocus={true}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={true}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </div>
        <div
          className="course-details"
        >
          <span>
            Section 
            01
             • 
          </span>
          <span>
            Seminar
             • 
          </span>
          <span
            className="course-id"
          >
            Class No. 
            101
          </span>
        </div>
      </div>
      <div
        className="course-info"
      >
        <div
          className="course-status course-status--closed"
        >
          <span />
          Closed
        </div>
        <div />
      </div>
    </div>
    <div
      className="item-body"
    >
      <ul
        className="course-desc"
      >
        <li>
          <span>
            Units 
          </span>
          4
        </li>
        <li>
          <span>
            Meeting Time 
          </span>
          12:00 pm - 1:50 pm
        </li>
        <li>
          <span>
            Meeting Days 
          </span>
          M-W
        </li>
        <li>
          <span>
            Room 
          </span>
          COE 101
        </li>
        <li>
          <span>
            Campus 
          </span>
          San Bernardino
        </li>
        <li>
          <span>
            Instructor
          </span>
          Dyck, Harold
        </li>
        <li>
          <span>
            Instruction Mode 
          </span>
          Classroom
        </li>
        <li>
          <span>
            Session 
          </span>
          6 weeks 1
        </li>
      </ul>
      <div
        className="course-books"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
        />
      </div>
    </div>
  </div>
</ClassesCards>
`;

exports[`when a class has low cost course material should display icon for low cost course material 1`] = `
<ClassesCards
  classes={
    Object {
      "amount": 0,
      "buildingCode": "COE",
      "campus": "MAIN",
      "catalogNo": "101",
      "classEndTime": "1:50 PM",
      "classMeetingNo": 1,
      "classNumber": 101,
      "classSection": "01",
      "classStartTime": "12:00 PM",
      "courseAttr": "Low Cost Course Materials, GE1-FOO",
      "courseId": "000001",
      "csuUnits": 4,
      "degreeType": "PBAC",
      "description": "ACCT GOVT & NONPROFIT ORG",
      "employeeId": "001343367",
      "enrolledCapacity": 30,
      "enrolledTotal": 28,
      "facilityId": "JB0113",
      "fri": "N",
      "geCourseAttr": "",
      "instructionMode": "P",
      "instructorName": "Dyck, Harold",
      "mon": "Y",
      "quarter": "2194",
      "room": "101",
      "sat": "N",
      "sessionCode": "1",
      "ssrComponent": "SEM",
      "subject": "ACCT",
      "sun": "N",
      "textbook": "",
      "thurs": "N",
      "title": "Introduction to Accounting",
      "topic": "",
      "tues": "N",
      "waitlistCapacity": 100,
      "waitlistTotal": 1,
      "wed": "Y",
    }
  }
  currentTerm="0000"
>
  <div
    className="course result-item"
  >
    <div
      className="item-header"
    >
      <div
        className="course-header"
      >
        <div
          className="course-name"
        >
          <strong>
            ACCT 101
             - Introduction to Accounting
          </strong>
          <Blueprint3.Popover
            boundary="scrollParent"
            captureDismiss={false}
            defaultIsOpen={false}
            disabled={false}
            hasBackdrop={false}
            hoverCloseDelay={300}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="click"
            minimal={false}
            modifiers={Object {}}
            openOnTargetFocus={true}
            popoverClassName="bp3-popover-content-sizing"
            position="auto"
            targetTagName="span"
            transitionDuration={300}
            usePortal={true}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onClick={[Function]}
                      >
                        <div
                          className="bp3-tooltip-indicator"
                          key=".0"
                        >
                          <button
                            className="course-info-btn"
                          >
                            <i
                              arial-label="hidden"
                              className="fas fa-info-circle"
                            />
                            <span
                              className="sr-only"
                            >
                              ACCT 101
                            </span>
                          </button>
                        </div>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={true}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={true}
                  enforceFocus={true}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={true}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </div>
        <div
          className="course-details"
        >
          <span>
            Section 
            01
             • 
          </span>
          <span>
            Seminar
             • 
          </span>
          <span
            className="course-id"
          >
            Class No. 
            101
          </span>
        </div>
      </div>
      <div
        className="course-info"
      >
        <div
          className="course-status course-status--closed"
        >
          <span />
          Closed
        </div>
        <div />
      </div>
    </div>
    <div
      className="item-body"
    >
      <ul
        className="course-desc"
      >
        <li>
          <span>
            Units 
          </span>
          4
        </li>
        <li>
          <span>
            Meeting Time 
          </span>
          12:00 pm - 1:50 pm
        </li>
        <li>
          <span>
            Meeting Days 
          </span>
          M-W
        </li>
        <li>
          <span>
            Room 
          </span>
          COE 101
        </li>
        <li>
          <span>
            Campus 
          </span>
          San Bernardino
        </li>
        <li>
          <span>
            Instructor
          </span>
          Dyck, Harold
        </li>
        <li>
          <span>
            Instruction Mode 
          </span>
          Classroom
        </li>
        <li>
          <span>
            Course Attribute 
          </span>
          Low Cost Course Materials, GE1-FOO
        </li>
      </ul>
      <div
        className="course-books"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
        />
        <div
          className="course--icons"
        >
          <img
            alt="Low Cost Course Materials"
            src="https://www.csusb.edu/sites/default/files/low-cost-book-icon-big.png"
          />
        </div>
      </div>
    </div>
  </div>
</ClassesCards>
`;

exports[`when a class has zero cost course material should display icon for zero cost course material 1`] = `
<ClassesCards
  classes={
    Object {
      "amount": 0,
      "buildingCode": "COE",
      "campus": "MAIN",
      "catalogNo": "101",
      "classEndTime": "1:50 PM",
      "classMeetingNo": 1,
      "classNumber": 101,
      "classSection": "01",
      "classStartTime": "12:00 PM",
      "courseAttr": "Zero Cost Course Materials",
      "courseId": "000001",
      "csuUnits": 4,
      "degreeType": "PBAC",
      "description": "ACCT GOVT & NONPROFIT ORG",
      "employeeId": "001343367",
      "enrolledCapacity": 30,
      "enrolledTotal": 28,
      "facilityId": "JB0113",
      "fri": "N",
      "geCourseAttr": "",
      "instructionMode": "P",
      "instructorName": "Dyck, Harold",
      "mon": "Y",
      "quarter": "2194",
      "room": "101",
      "sat": "N",
      "sessionCode": "1",
      "ssrComponent": "SEM",
      "subject": "ACCT",
      "sun": "N",
      "textbook": "",
      "thurs": "N",
      "title": "Introduction to Accounting",
      "topic": "",
      "tues": "N",
      "waitlistCapacity": 100,
      "waitlistTotal": 1,
      "wed": "Y",
    }
  }
  currentTerm="0000"
>
  <div
    className="course result-item"
  >
    <div
      className="item-header"
    >
      <div
        className="course-header"
      >
        <div
          className="course-name"
        >
          <strong>
            ACCT 101
             - Introduction to Accounting
          </strong>
          <Blueprint3.Popover
            boundary="scrollParent"
            captureDismiss={false}
            defaultIsOpen={false}
            disabled={false}
            hasBackdrop={false}
            hoverCloseDelay={300}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="click"
            minimal={false}
            modifiers={Object {}}
            openOnTargetFocus={true}
            popoverClassName="bp3-popover-content-sizing"
            position="auto"
            targetTagName="span"
            transitionDuration={300}
            usePortal={true}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onClick={[Function]}
                      >
                        <div
                          className="bp3-tooltip-indicator"
                          key=".0"
                        >
                          <button
                            className="course-info-btn"
                          >
                            <i
                              arial-label="hidden"
                              className="fas fa-info-circle"
                            />
                            <span
                              className="sr-only"
                            >
                              ACCT 101
                            </span>
                          </button>
                        </div>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={true}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={true}
                  enforceFocus={true}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={true}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </div>
        <div
          className="course-details"
        >
          <span>
            Section 
            01
             • 
          </span>
          <span>
            Seminar
             • 
          </span>
          <span
            className="course-id"
          >
            Class No. 
            101
          </span>
        </div>
      </div>
      <div
        className="course-info"
      >
        <div
          className="course-status course-status--closed"
        >
          <span />
          Closed
        </div>
        <div />
      </div>
    </div>
    <div
      className="item-body"
    >
      <ul
        className="course-desc"
      >
        <li>
          <span>
            Units 
          </span>
          4
        </li>
        <li>
          <span>
            Meeting Time 
          </span>
          12:00 pm - 1:50 pm
        </li>
        <li>
          <span>
            Meeting Days 
          </span>
          M-W
        </li>
        <li>
          <span>
            Room 
          </span>
          COE 101
        </li>
        <li>
          <span>
            Campus 
          </span>
          San Bernardino
        </li>
        <li>
          <span>
            Instructor
          </span>
          Dyck, Harold
        </li>
        <li>
          <span>
            Instruction Mode 
          </span>
          Classroom
        </li>
        <li>
          <span>
            Course Attribute 
          </span>
          Zero Cost Course Materials
        </li>
      </ul>
      <div
        className="course-books"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
        />
        <div
          className="course--icons"
        >
          <img
            alt="Zero Cost Course Materials"
            src="https://www.csusb.edu/sites/default/files/zero-cost-book-icon-big.png"
          />
        </div>
      </div>
    </div>
  </div>
</ClassesCards>
`;

exports[`when a class has zero cost course materials and low cost course materials should display icons for ZCCM and LCCM 1`] = `
<ClassesCards
  classes={
    Object {
      "amount": 0,
      "buildingCode": "COE",
      "campus": "MAIN",
      "catalogNo": "101",
      "classEndTime": "1:50 PM",
      "classMeetingNo": 1,
      "classNumber": 101,
      "classSection": "01",
      "classStartTime": "12:00 PM",
      "courseAttr": "Zero Cost Course Materials, Low Cost Course Materials",
      "courseId": "000001",
      "csuUnits": 4,
      "degreeType": "PBAC",
      "description": "ACCT GOVT & NONPROFIT ORG",
      "employeeId": "001343367",
      "enrolledCapacity": 30,
      "enrolledTotal": 28,
      "facilityId": "JB0113",
      "fri": "N",
      "geCourseAttr": "",
      "instructionMode": "P",
      "instructorName": "Dyck, Harold",
      "mon": "Y",
      "quarter": "2194",
      "room": "101",
      "sat": "N",
      "sessionCode": "1",
      "ssrComponent": "SEM",
      "subject": "ACCT",
      "sun": "N",
      "textbook": "",
      "thurs": "N",
      "title": "Introduction to Accounting",
      "topic": "",
      "tues": "N",
      "waitlistCapacity": 100,
      "waitlistTotal": 1,
      "wed": "Y",
    }
  }
  currentTerm="0000"
>
  <div
    className="course result-item"
  >
    <div
      className="item-header"
    >
      <div
        className="course-header"
      >
        <div
          className="course-name"
        >
          <strong>
            ACCT 101
             - Introduction to Accounting
          </strong>
          <Blueprint3.Popover
            boundary="scrollParent"
            captureDismiss={false}
            defaultIsOpen={false}
            disabled={false}
            hasBackdrop={false}
            hoverCloseDelay={300}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="click"
            minimal={false}
            modifiers={Object {}}
            openOnTargetFocus={true}
            popoverClassName="bp3-popover-content-sizing"
            position="auto"
            targetTagName="span"
            transitionDuration={300}
            usePortal={true}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onClick={[Function]}
                      >
                        <div
                          className="bp3-tooltip-indicator"
                          key=".0"
                        >
                          <button
                            className="course-info-btn"
                          >
                            <i
                              arial-label="hidden"
                              className="fas fa-info-circle"
                            />
                            <span
                              className="sr-only"
                            >
                              ACCT 101
                            </span>
                          </button>
                        </div>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={true}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={true}
                  enforceFocus={true}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={true}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </div>
        <div
          className="course-details"
        >
          <span>
            Section 
            01
             • 
          </span>
          <span>
            Seminar
             • 
          </span>
          <span
            className="course-id"
          >
            Class No. 
            101
          </span>
        </div>
      </div>
      <div
        className="course-info"
      >
        <div
          className="course-status course-status--closed"
        >
          <span />
          Closed
        </div>
        <div />
      </div>
    </div>
    <div
      className="item-body"
    >
      <ul
        className="course-desc"
      >
        <li>
          <span>
            Units 
          </span>
          4
        </li>
        <li>
          <span>
            Meeting Time 
          </span>
          12:00 pm - 1:50 pm
        </li>
        <li>
          <span>
            Meeting Days 
          </span>
          M-W
        </li>
        <li>
          <span>
            Room 
          </span>
          COE 101
        </li>
        <li>
          <span>
            Campus 
          </span>
          San Bernardino
        </li>
        <li>
          <span>
            Instructor
          </span>
          Dyck, Harold
        </li>
        <li>
          <span>
            Instruction Mode 
          </span>
          Classroom
        </li>
        <li>
          <span>
            Course Attribute 
          </span>
          Zero Cost Course Materials, Low Cost Course Materials
        </li>
      </ul>
      <div
        className="course-books"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
        />
        <div
          className="course--icons"
        >
          <img
            alt="Zero Cost Course Materials"
            src="https://www.csusb.edu/sites/default/files/zero-cost-book-icon-big.png"
          />
          <img
            alt="Low Cost Course Materials"
            src="https://www.csusb.edu/sites/default/files/low-cost-book-icon-big.png"
          />
        </div>
      </div>
    </div>
  </div>
</ClassesCards>
`;

exports[`when a class is a fully online should not display the room number in the markup 1`] = `
<ClassesCards
  classes={
    Object {
      "amount": 0,
      "buildingCode": "COE",
      "campus": "MAIN",
      "catalogNo": "101",
      "classEndTime": "1:50 PM",
      "classMeetingNo": 1,
      "classNumber": 101,
      "classSection": "01",
      "classStartTime": "12:00 PM",
      "courseAttr": "",
      "courseId": "000001",
      "csuUnits": 4,
      "degreeType": "PBAC",
      "description": "ACCT GOVT & NONPROFIT ORG",
      "employeeId": "001343367",
      "enrolledCapacity": 30,
      "enrolledTotal": 28,
      "facilityId": "JB0113",
      "fri": "N",
      "geCourseAttr": "",
      "instructionMode": "FO",
      "instructorName": "Dyck, Harold",
      "mon": "Y",
      "quarter": "2194",
      "room": "101",
      "sat": "N",
      "sessionCode": "1",
      "ssrComponent": "SEM",
      "subject": "ACCT",
      "sun": "N",
      "textbook": "",
      "thurs": "N",
      "title": "Introduction to Accounting",
      "topic": "",
      "tues": "N",
      "waitlistCapacity": 100,
      "waitlistTotal": 1,
      "wed": "Y",
    }
  }
  currentTerm="0000"
>
  <div
    className="course result-item"
  >
    <div
      className="item-header"
    >
      <div
        className="course-header"
      >
        <div
          className="course-name"
        >
          <strong>
            ACCT 101
             - Introduction to Accounting
          </strong>
          <Blueprint3.Popover
            boundary="scrollParent"
            captureDismiss={false}
            defaultIsOpen={false}
            disabled={false}
            hasBackdrop={false}
            hoverCloseDelay={300}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="click"
            minimal={false}
            modifiers={Object {}}
            openOnTargetFocus={true}
            popoverClassName="bp3-popover-content-sizing"
            position="auto"
            targetTagName="span"
            transitionDuration={300}
            usePortal={true}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onClick={[Function]}
                      >
                        <div
                          className="bp3-tooltip-indicator"
                          key=".0"
                        >
                          <button
                            className="course-info-btn"
                          >
                            <i
                              arial-label="hidden"
                              className="fas fa-info-circle"
                            />
                            <span
                              className="sr-only"
                            >
                              ACCT 101
                            </span>
                          </button>
                        </div>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={true}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={true}
                  enforceFocus={true}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={true}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </div>
        <div
          className="course-details"
        >
          <span>
            Section 
            01
             • 
          </span>
          <span>
            Seminar
             • 
          </span>
          <span
            className="course-id"
          >
            Class No. 
            101
          </span>
        </div>
      </div>
      <div
        className="course-info"
      >
        <div
          className="course-status course-status--closed"
        >
          <span />
          Closed
        </div>
        <div />
      </div>
    </div>
    <div
      className="item-body"
    >
      <ul
        className="course-desc"
      >
        <li>
          <span>
            Units 
          </span>
          4
        </li>
        <li>
          <span>
            Meeting Time 
          </span>
          12:00 pm - 1:50 pm
        </li>
        <li>
          <span>
            Meeting Days 
          </span>
          M-W
        </li>
        <li>
          <span>
            Campus 
          </span>
          San Bernardino
        </li>
        <li>
          <span>
            Instructor
          </span>
          Dyck, Harold
        </li>
        <li>
          <span>
            Instruction Mode 
          </span>
          Fully Online (AB 386)
        </li>
      </ul>
      <div
        className="course-books"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
        />
      </div>
    </div>
  </div>
</ClassesCards>
`;

exports[`when a class results component is displayed should display the correct markup 1`] = `
<ClassesCards
  classes={
    Object {
      "amount": 0,
      "buildingCode": "COE",
      "campus": "MAIN",
      "catalogNo": "101",
      "classEndTime": "1:50 PM",
      "classMeetingNo": 1,
      "classNumber": 101,
      "classSection": "01",
      "classStartTime": "12:00 PM",
      "courseAttr": "",
      "courseId": "000001",
      "csuUnits": 4,
      "degreeType": "PBAC",
      "description": "ACCT GOVT & NONPROFIT ORG",
      "employeeId": "001343367",
      "enrolledCapacity": 30,
      "enrolledTotal": 28,
      "facilityId": "JB0113",
      "fri": "N",
      "geCourseAttr": "",
      "instructionMode": "P",
      "instructorName": "Dyck, Harold",
      "mon": "Y",
      "quarter": "2194",
      "room": "101",
      "sat": "N",
      "sessionCode": "1",
      "ssrComponent": "SEM",
      "subject": "ACCT",
      "sun": "N",
      "textbook": "",
      "thurs": "N",
      "title": "Introduction to Accounting",
      "topic": "",
      "tues": "N",
      "waitlistCapacity": 100,
      "waitlistTotal": 1,
      "wed": "Y",
    }
  }
  currentTerm="0000"
>
  <div
    className="course result-item"
  >
    <div
      className="item-header"
    >
      <div
        className="course-header"
      >
        <div
          className="course-name"
        >
          <strong>
            ACCT 101
             - Introduction to Accounting
          </strong>
          <Blueprint3.Popover
            boundary="scrollParent"
            captureDismiss={false}
            defaultIsOpen={false}
            disabled={false}
            hasBackdrop={false}
            hoverCloseDelay={300}
            hoverOpenDelay={150}
            inheritDarkTheme={true}
            interactionKind="click"
            minimal={false}
            modifiers={Object {}}
            openOnTargetFocus={true}
            popoverClassName="bp3-popover-content-sizing"
            position="auto"
            targetTagName="span"
            transitionDuration={300}
            usePortal={true}
            wrapperTagName="span"
          >
            <Manager>
              <span
                className="bp3-popover-wrapper"
              >
                <Reference
                  innerRef={[Function]}
                >
                  <InnerReference
                    innerRef={[Function]}
                    setReferenceNode={[Function]}
                  >
                    <Blueprint3.ResizeSensor
                      onResize={[Function]}
                    >
                      <span
                        className="bp3-popover-target"
                        onClick={[Function]}
                      >
                        <div
                          className="bp3-tooltip-indicator"
                          key=".0"
                        >
                          <button
                            className="course-info-btn"
                          >
                            <i
                              arial-label="hidden"
                              className="fas fa-info-circle"
                            />
                            <span
                              className="sr-only"
                            >
                              ACCT 101
                            </span>
                          </button>
                        </div>
                      </span>
                    </Blueprint3.ResizeSensor>
                  </InnerReference>
                </Reference>
                <Blueprint3.Overlay
                  autoFocus={true}
                  backdropClassName="bp3-popover-backdrop"
                  backdropProps={Object {}}
                  canEscapeKeyClose={true}
                  canOutsideClickClose={true}
                  enforceFocus={true}
                  hasBackdrop={false}
                  isOpen={false}
                  lazy={true}
                  onClose={[Function]}
                  transitionDuration={300}
                  transitionName="bp3-popover"
                  usePortal={true}
                />
              </span>
            </Manager>
          </Blueprint3.Popover>
        </div>
        <div
          className="course-details"
        >
          <span>
            Section 
            01
             • 
          </span>
          <span>
            Seminar
             • 
          </span>
          <span
            className="course-id"
          >
            Class No. 
            101
          </span>
        </div>
      </div>
      <div
        className="course-info"
      >
        <div
          className="course-status course-status--closed"
        >
          <span />
          Closed
        </div>
        <div />
      </div>
    </div>
    <div
      className="item-body"
    >
      <ul
        className="course-desc"
      >
        <li>
          <span>
            Units 
          </span>
          4
        </li>
        <li>
          <span>
            Meeting Time 
          </span>
          12:00 pm - 1:50 pm
        </li>
        <li>
          <span>
            Meeting Days 
          </span>
          M-W
        </li>
        <li>
          <span>
            Room 
          </span>
          COE 101
        </li>
        <li>
          <span>
            Campus 
          </span>
          San Bernardino
        </li>
        <li>
          <span>
            Instructor
          </span>
          Dyck, Harold
        </li>
        <li>
          <span>
            Instruction Mode 
          </span>
          Classroom
        </li>
      </ul>
      <div
        className="course-books"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
        />
      </div>
    </div>
  </div>
</ClassesCards>
`;
